fix: background color in lightbox image container doesn't match light/dark mode

--- a/src/assets/stylesheets/modern/main/extensions/_glightbox.scss
+++ b/src/assets/stylesheets/modern/main/extensions/_glightbox.scss
@@ -36,6 +36,11 @@ html.glightbox-open {
 // GLightbox
 html .gslide {
 
+  // Image background
+  .gslide-image img {
+    background: var(--md-default-bg-color);
+  }
+
   // Description background
   .gslide-description {
     background: var(--md-default-bg-color);
